# gitlab-pr-bot

./: .env.dist  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.chglog/: config.yml
.github/workflows/: docker-image.yml  rust.yml
src/: gitlab.rs  main.rs  pr.rs  repo.rs  teams.rs
